# realai

./: .env.example  .gitattributes  DEPLOYMENT.md  QUICKSTART_LOCAL.md  README.md  examples_limitless.py  local_models.py  models.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  providers.yaml  pyproject.toml  realai.py  realai_memory.sqlite3  render.yaml  render.yml  setup.py  test_local_server.py  test_realai.py  tsconfig.json  vercel.json
.github/workflows/: ci.yml
agents/runtime/: index.ts  planner.ts
agents/templates/: coder.ts  researcher.ts
agents/tools/: browser.ts  web-search.ts
api/: index.py
app/: index.html  package.json  vite.config.ts
app/src/: App.tsx  api.ts
app/src/components/: AudioPanel.tsx  CapabilitiesPanel.tsx  ChatPanel.tsx  CodePanel.tsx  ImagePanel.tsx  Layout.tsx
app/src/styles/: index.css
apps/api/: main.py
apps/dashboard/: package.json
apps/frontend/: .env.local.example  README.md  next.config.js  package.json  vercel.json
apps/frontend/src/app/: error.tsx  page.tsx
apps/frontend/src/lib/: realai.ts
apps/widget/: package.json
billing/: __init__.py
core/agents/: worker.py
core/tools/: __init__.py  code.py  credentials.py  executor.py  registry.py
docs/: architecture.md  developer-onboarding.md  model-manifest.md  provider-authoring.md
marketplace/: loader.ts
models/: index.ts  types.ts
models/realai-1.0/: manifest.json  package.json
models/realai-overseer/: manifest.json  package.json
models/realai-vision/: manifest.json  package.json
providers/: registry.ts  types.ts
providers/openai/: index.ts  package.json
providers/realai/: index.ts  package.json
realai/: api_server.py  server_settings.py
realai-frontend/: package-lock.json  package.json  pnpm-lock.yaml
realai-frontend/src/lib/: env.ts
realai-orchestration/: __init__.py  registry.py  team.py
realai-orchestration/workflows/: add-provider.json  build-capability.json  security-review.json
realai/cli/: realai_cli.py
realai/sdk/python/: realai_client.py
realai/server/: app.py  backends.py  config.py  embeddings_backend.py  memory_store.py  orchestration.py  persistence.py  providers.py  router.py
realai_api/: app.py  schemas.py
tests/: test_local_llama_integration.py
tests/api/: test_chat.py  test_embeddings.py  test_models.py  test_providers.py
training/: __init__.py
(+3 files in other folders)
