[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realai"
version = "2.0.0"
description = "The limitless AI that can truly do anything - from Web3 to groceries, therapy to business building"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [{ name = "RealAI Team" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.1",
  "requests>=2.28.0",
  "beautifulsoup4>=4.12.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.25.0",
  "python-multipart>=0.0.6",
  "pydantic>=2.7.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.scripts]
realai        = "realai:main"
realai-cli    = "realai.cli.realai_cli:main"
realai-server = "realai.server.app:main"
